--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,5 @@
-Love Will Tear Us Apart
-
-A Forest
-Nine While Nine
+<ol>
+  <li>Love Will Tear Us Apart</li>
+  <li>A Forest</li>
+  <li>Nine While Nine</li>
+</ol>
